<resources>
    <string name="app_name">MDemo</string>
    <string name="email">Email</string>
    <string name="login">Authenticate</string>
    <string name="not_registered_register_here">Not Registered ? Register Here!!!</string>
    <string name="password">Password</string>
    <string name="welcome_to_stock_predictor">•´¯`•. ѕтocĸ eмperor .•´¯`•</string>
    <string name="already_registered_login_now">Already Registered??? Login Now!!!</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="password1">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="mobile">Mobile</string>
    <string name="my_stock">My Stocks</string>
    <string name="my_profile">My Profile</string>
    <string name="code">Code</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password1">Forgot Password??</string>
    <item name="fragment_frame" type="id">fragmet_name</item>
</resources>
